[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/pickups/pickup.glb" type="PackedScene" id=1]
[ext_resource path="res://objects/pickups/pickup.gd" type="Script" id=2]
[ext_resource path="res://materials/metal.tres" type="Material" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.167, 0.167, 0.167 )

[sub_resource type="Animation" id=2]
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.15, 0 ), Vector3( 0, 0.2, 0 ), Vector3( 0, 0.15, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[node name="Pickup" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Pedestal" parent="." index="0"]
material/0 = ExtResource( 3 )

[node name="Position" type="Position3D" parent="." index="1"]
transform = Transform( -0.809017, 0, 0.587785, 0, 1, 0, -0.587785, 0, -0.809017, 0, 0.1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.318, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="RespawnTimer" type="Timer" parent="." index="4"]
wait_time = 10.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_respawn"]
